--- a/app/global.scss
+++ b/app/global.scss
@@ -1,6 +1,54 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: Poppins;
+  src: url("../assets/fonts/Poppins/Poppins-Regular.ttf");
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: Poppins;
+  src: url('../assets/fonts/Poppins/Poppins-Bold.ttf');
+  font-weight: 700;
+}
+
+@font-face {
+  font-family: Poppins;
+  src: url('../assets/fonts/Poppins/Poppins-ExtraBold.ttf');
+  font-weight: 800;
+}
+
+@font-face {
+  font-family: Poppins;
+  src: url('../assets/fonts/Poppins/Poppins-Medium.ttf');
+  font-weight: 500;
+}
+
+@font-face {
+  font-family: Poppins;
+  src: url('../assets/fonts/Poppins/Poppins-SemiBold.ttf');
+  font-weight: 600;
+}
+
+@font-face {
+  font-family: Poppins;
+  src: url('../assets/fonts/Poppins/Poppins-Thin.ttf');
+  font-weight: 100;
+}
+
+@font-face {
+  font-family: Poppins;
+  src: url('../assets/fonts/Poppins/Poppins-Light.ttf');
+  font-weight: 300;
+}
+
+@font-face {
+  font-family: Poppins;
+  src: url('../assets/fonts/Poppins/Poppins-ExtraLight.ttf');
+  font-weight: 200;
+}
  
 @layer base {
   :root {
@@ -65,10 +113,6 @@
     --ring: 212.7 26.8% 83.9%;
   }
 }
-
-body{
-  background-color: rgb(235, 233, 233)
-}
  
 @layer base {
   * {
@@ -76,5 +120,43 @@ body{
   }
   body {
     @apply bg-background text-foreground;
+  }
+}
+
+body{
+  * {
+    scrollbar-width: 1px;
+    scrollbar-color: #CCCCCC #FAFAFB;
+  }
+  background-color: rgba(236, 236, 236, 0.646);
+  /* Chrome, Edge and Safari */
+  *::-webkit-scrollbar {
+    height: 5px;
+    width: 5px;
+  }
+  *::-webkit-scrollbar-track {
+    border-radius: 1px;
+    background-color: #FAFAFB;
+  }
+  
+  *::-webkit-scrollbar-track:hover {
+    background-color: #FAFAFB;
+  }
+  
+  *::-webkit-scrollbar-track:active {
+    background-color: #FAFAFB;
+  }
+  
+  *::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background-color: #CCCCCC;
+  }
+  
+  *::-webkit-scrollbar-thumb:hover {
+    background-color: #ADADAD;
+  }
+  
+  *::-webkit-scrollbar-thumb:active {
+    background-color: #8D8D8D;
   }
 }
